# bullshitometer-backend

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/: main.py
tests/: test_main.py
