[project]
name = "bullshitometer-backend"
version = "0.1.0"
description = "Scans transcripts to find statements/predictions which can be assessed against reality"
authors = [
    {name = "Eager Tom",email = "lord.eager.tom@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ruff (>=0.11.2,<0.12.0)",
    "mypy (>=1.15.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pre-commit = "^4.2.0"
ruff = "^0.11.2"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = ["I", "N", "B", "SIM", "FURB", "C90"]

